--- a/Capitalism/Capitalism.csproj
+++ b/Capitalism/Capitalism.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A9A81F01-58DD-4030-BB82-AE7E71D68D99}</ProjectGuid>
+    <ProjectGuid>{D4E0525F-537E-49FA-B0A8-D19B774580E7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Visualize</RootNamespace>
-    <AssemblyName>Visualize</AssemblyName>
+    <RootNamespace>Capitalism</RootNamespace>
+    <AssemblyName>Capitalism</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NuGetPackageImportStamp>
@@ -42,13 +42,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Config.cs" />
-    <Compile Include="IVisualizeHandler.cs" />
-    <Compile Include="Profile.cs" />
-    <Compile Include="Effects.cs" />
-    <Compile Include="SpriteBatchFix.cs" />
-    <Compile Include="VisualizeMod.cs" />
+    <Compile Include="CapitalismMod.cs" />
+    <Compile Include="Overrides\MoneyDialFix.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VisualizeHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="manifest.json" />
@@ -58,6 +55,12 @@
     <ProjectReference Include="..\..\Harmony\Harmony\Harmony.csproj">
       <Project>{69aee16a-b6e7-4642-8081-3928b32455df}</Project>
       <Name>Harmony</Name>
+      <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\Visualize\Visualize.csproj">
+      <Project>{a9a81f01-58dd-4030-bb82-ae7e71d68d99}</Project>
+      <Name>Visualize</Name>
+      <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
