--- a/CustomElementHandlerHarmony/CustomElementHandlerHarmony.csproj
+++ b/CustomElementHandlerHarmony/CustomElementHandlerHarmony.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4B5FC017-74C2-4C03-9A55-41DCD90C489B}</ProjectGuid>
+    <ProjectGuid>{C4BE7AAF-5DD1-4597-B1C3-3BD8B2816052}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CustomFurnitureAnywhere</RootNamespace>
-    <AssemblyName>CustomFurnitureAnywhere</AssemblyName>
+    <RootNamespace>CustomElementHandlerHarmony</RootNamespace>
+    <AssemblyName>CustomElementHandlerHarmony</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NuGetPackageImportStamp>
@@ -32,14 +32,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntoaroxFramework">
-      <HintPath>.\EntoaroxFramework.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="FurnitureAnywhere">
-      <HintPath>.\FurnitureAnywhere.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -50,31 +42,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AnywhereCustomFurniture.cs" />
-    <Compile Include="CustomFurnitureAnywhereMod.cs" />
-    <Compile Include="FurnitureAnywhereModFix.cs" />
+    <Compile Include="CustomElementHandlerHarmonyMod.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="manifest.json" />
-    <None Include="packages.config" />
+    <Compile Include="SerializerFix.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Harmony\Harmony\Harmony.csproj">
       <Project>{69aee16a-b6e7-4642-8081-3928b32455df}</Project>
       <Name>Harmony</Name>
-      <Private>False</Private>
     </ProjectReference>
-    <ProjectReference Include="..\CustomElementHandler\CustomElementHandler.csproj">
-      <Project>{7a31daf1-0ac8-48f7-bd2d-e861850adc72}</Project>
-      <Name>CustomElementHandler</Name>
-      <Private>False</Private>
-    </ProjectReference>
-    <ProjectReference Include="..\CustomFurniture\CustomFurniture.csproj">
-      <Project>{b60cc08a-abd5-4b7b-81bf-c0295c11a025}</Project>
-      <Name>CustomFurniture</Name>
-      <Private>False</Private>
-    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="manifest.json" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Pathoschild.Stardew.ModBuildConfig.2.0.2\build\Pathoschild.Stardew.ModBuildConfig.targets" Condition="Exists('..\packages\Pathoschild.Stardew.ModBuildConfig.2.0.2\build\Pathoschild.Stardew.ModBuildConfig.targets')" />
