--- a/CustomFurnitureAnywhere/manifest.json
+++ b/CustomFurnitureAnywhere/manifest.json
@@ -3,8 +3,8 @@
   "Author": "Platonymous",
   "Version": {
     "MajorVersion": 0,
-    "MinorVersion": 7,
-    "PatchVersion": 7,
+    "MinorVersion": 8,
+    "PatchVersion": 1,
     "Build": null
   },
   "Description": "Makes Custom Furniture work with Furniture Anywhere",
@@ -19,6 +19,9 @@
     },
     {
       "UniqueID": "Entoarox.FurnitureAnywhere"
+    },
+    {
+      "UniqueID": "Entoarox.EntoaroxFramework"
     }
   ],
   "UpdateKeys": [ "Nexus:1254" ]
