--- a/PyTK/PyTK.csproj
+++ b/PyTK/PyTK.csproj
@@ -42,16 +42,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions\PyAssets.cs" />
+    <Compile Include="Extensions\PyTextures.cs" />
+    <Compile Include="Types\AssetInjector.cs" />
     <Compile Include="Types\ButtonClick.cs" />
     <Compile Include="Extensions\PyCollections.cs" />
     <Compile Include="Extensions\PyEvents.cs" />
-    <Compile Include="Extensions\PyDefault.cs" />
     <Compile Include="Extensions\PyMaps.cs" />
     <Compile Include="Extensions\PyShops.cs" />
     <Compile Include="Extensions\PyShortcuts.cs" />
     <Compile Include="PyTKMod.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PyUtils.cs" />
+    <Compile Include="Types\ColorManipulation.cs" />
     <Compile Include="Types\EventConditions.cs" />
     <Compile Include="Types\InventoryItem.cs" />
     <Compile Include="Types\ItemSelector.cs" />
