--- a/HarpOfYobaRedux/HarpOfYobaRedux.csproj
+++ b/HarpOfYobaRedux/HarpOfYobaRedux.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Config.cs" />
     <Compile Include="Magic\TimeMagic.cs" />
     <Compile Include="Magic\AnimalMagic.cs" />
     <Compile Include="Magic\BirthdayMagic.cs" />
