--- a/CustomFarmingRedux/CustomFarmingRedux.csproj
+++ b/CustomFarmingRedux/CustomFarmingRedux.csproj
@@ -49,6 +49,7 @@
     <Compile Include="CustomMachineBlueprint.cs" />
     <Compile Include="CustomObject.cs" />
     <Compile Include="IngredientBlueprint.cs" />
+    <Compile Include="OvCraftingRecipe.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RecipeBlueprint.cs" />
   </ItemGroup>
