--- a/Ultiplayer/manifest.json
+++ b/Ultiplayer/manifest.json
@@ -1,10 +1,10 @@
 {
   "Name": "Ultiplayer",
   "Author": "Platonymous",
-  "Version": "0.2.5",
+  "Version": "0.2.6",
   "Description": "Allows for as many Farmhands as you like.",
   "UniqueID": "Platonymous.Ultiplayer",
   "EntryDll": "Ultiplayer.dll",
   "MinimumApiVersion": "2.6-beta",
-  "UpdateKeys": [ "Nexus:" ]
+  "UpdateKeys": [ "Nexus:2134" ]
 }
